--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="google-site-verification" content="google46b5a0f215e818af" />
+  <meta name="google-site-verification" content="CnV8bZulwD6R9TzCQuGJuYY2oOPwvlUgEUcsQ-c0Gq8" />
   <link rel="icon" type="image/png" href="/logo.png" />
   <link rel="apple-touch-icon" href="/logo.png" />
   <link rel="manifest" href="/manifest.json" />
