--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#7B4BFF" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vizoraa</title>
+  <title>Vizoraa – Digital Visiting Cards</title>
+  <meta name="description"
+    content="Vizoraa is a smart digital business card platform to share your profile, links, QR codes, and professional identity instantly." />
 </head>
 
 <body>
